# radio_app_cli_powershell

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
radio_ps/: .gitignore  README.md  Start-Radio.ps1  pyproject.toml  radio.py  radio_log.txt  recent.json  requirements.txt  session.json
radio_ps/core/: api.py  config.py  equalizer.py  player.py
radio_ps/services/: station_service.py
radio_ps/src/radio_ps/: __init__.py  main.py
radio_ps/src/radio_ps/core/: __init__.py  api.py  config.py  equalizer.py  player.py
radio_ps/src/radio_ps/services/: __init__.py  station_service.py
radio_ps/src/radio_ps/ui/: __init__.py  cli_ui.py
radio_ps/src/radio_ps/utils/: __init__.py  logger.py  storage.py
radio_ps/tests/: __init__.py
radio_ps/ui/: cli_ui.py
radio_ps/utils/: logger.py  storage.py
